<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_willkommen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="25dp"
        android:textColor="#0000FF"
        android:textAlignment="center"
        android:text="@string/willkommen"/>

    <EditText
        android:id="@+id/et_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_willkommen"
        android:layout_centerHorizontal="true"
        android:lines="1"
        android:hint="@string/hint_euro"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_bitcoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_euro"
        android:layout_marginTop="20dp"
        android:text="@string/hint_bitcoin"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tv_bitcoin"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_change"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_bitcoin"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_exit" />

</RelativeLayout>
